# tree-sitter-hxml

./: .npmrc  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test-examples.sh  tree-sitter.json
.github/workflows/: test-parser.yml
bindings/c/: tree-sitter-hxml.pc.in
bindings/c/tree_sitter/: tree-sitter-hxml.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hxml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHxmlTests/: TreeSitterHxmlTests.swift
examples/: advanced.hxml  basic.hxml  common.hxml  edge-cases.hxml  game.hxml  library-dev.hxml  macro-inject.hxml  mobile.hxml  multiplatform.hxml  server.hxml
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced.txt  core.txt  define.txt  flag.txt  flags.txt  library.txt  macro.txt  option.txt  target.txt
test/highlight/: flags.hxml  options.hxml
