[package]
name = "tree-sitter-hxml"
description = "Haxe hxml files"
version = "0.1.0"
authors = ["tong <tong@disktree.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hxml"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tong/tree-sitter-hxml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
